finish A1 assignment